# Narrative-Risk-Simulator

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  releases.md
data/seed/: crisis_cases.json  policies.json  statements.json  trends.json
docs/: product-overview.md  releases.md
skills/write-tests/: SKILL.md
skills/write-tests/agents/: openai.yaml
src/narrative_risk/: __init__.py  analyze.py  config.py  index.py  ingest.py  models.py  retrieve.py  seed.py
tests/: test_analyze.py  test_config.py  test_ingest.py  test_retrieve.py
